added an img description

--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,13 @@
               </article>
               <picture>
                 <source srcset="./img/card-tour-photo-1.webp 1x, ./img/card-tour-photo-1@2x.webp 2x" type="image/webp">
-                <img class="card__image" src="./img/card-tour-photo-1.jpg" srcset="./img/card-tour-photo-1@2x.jpg 2x" loading="lazy" decoding="async" width="318" height="318" alt="">
+                <img class="card__image" src="./img/card-tour-photo-1.jpg" srcset="./img/card-tour-photo-1@2x.jpg 2x"
+                     loading="lazy"
+                     decoding="async"
+                     width="318"
+                     height="318"
+                     alt="Фотография туа на машине."
+                >
               </picture>
               <div class="card__overlay"></div>
             </li>
@@ -142,7 +148,13 @@
               </article>
               <picture>
                 <source srcset="./img/card-tour-photo-2.webp 1x, ./img/card-tour-photo-2@2x.webp 2x" type="image/webp">
-                <img class="card__image" src="./img/card-tour-photo-2.jpg" srcset="./img/card-tour-photo-2@2x.jpg 2x" loading="lazy" decoding="async" width="318" height="318" alt="">
+                <img class="card__image" src="./img/card-tour-photo-2.jpg" srcset="./img/card-tour-photo-2@2x.jpg 2x"
+                     loading="lazy"
+                     decoding="async"
+                     width="318"
+                     height="318"
+                     alt="Фотография тура на пески."
+                >
               </picture>
               <div class="card__overlay"></div>
             </li>
@@ -163,7 +175,13 @@
               </article>
               <picture>
                 <source srcset="./img/card-tour-photo-3.webp 1x, ./img/card-tour-photo-3@2x.webp 2x" type="image/webp">
-                <img class="card__image" src="./img/card-tour-photo-3.jpg" srcset="./img/card-tour-photo-3@2x.jpg 2x" loading="lazy" decoding="async" width="318" height="318" alt="">
+                <img class="card__image" src="./img/card-tour-photo-3.jpg" srcset="./img/card-tour-photo-3@2x.jpg 2x"
+                     loading="lazy"
+                     decoding="async"
+                     width="318"
+                     height="318"
+                     alt="Фотография тура в город с горами."
+                >
               </picture>
               <div class="card__overlay"></div>
             </li>
@@ -184,7 +202,13 @@
               </article>
               <picture>
                 <source srcset="./img/card-tour-photo-4.webp 1x, ./img/card-tour-photo-4@2x.webp 2x" type="image/webp">
-                <img class="card__image" src="./img/card-tour-photo-4.jpg" srcset="./img/card-tour-photo-4@2x.jpg 2x" loading="lazy" decoding="async" width="318" height="318" alt="">
+                <img class="card__image" src="./img/card-tour-photo-4.jpg" srcset="./img/card-tour-photo-4@2x.jpg 2x"
+                     loading="lazy"
+                     decoding="async"
+                     width="318"
+                     height="318"
+                     alt="Фотография тура в город."
+                >
               </picture>
               <div class="card__overlay"></div>
             </li>
@@ -205,7 +229,13 @@
               </article>
               <picture>
                 <source srcset="./img/card-tour-photo-5.webp 1x, ./img/card-tour-photo-5@2x.webp 2x" type="image/webp">
-                <img class="card__image" src="./img/card-tour-photo-5.jpg" srcset="./img/card-tour-photo-5@2x.jpg 2x" loading="lazy" decoding="async" width="318" height="318" alt="">
+                <img class="card__image" src="./img/card-tour-photo-5.jpg" srcset="./img/card-tour-photo-5@2x.jpg 2x"
+                     loading="lazy"
+                     decoding="async"
+                     width="318"
+                     height="318"
+                     alt="Фотография тура на пляж."
+                >
               </picture>
               <div class="card__overlay"></div>
             </li>
@@ -226,7 +256,13 @@
               </article>
               <picture>
                 <source srcset="./img/card-tour-photo-6.webp 1x, ./img/card-tour-photo-6@2x.webp 2x" type="image/webp">
-                <img class="card__image" src="./img/card-tour-photo-6.jpg" srcset="./img/card-tour-photo-6@2x.jpg 2x" loading="lazy" decoding="async" width="318" height="318" alt="">
+                <img class="card__image" src="./img/card-tour-photo-6.jpg" srcset="./img/card-tour-photo-6@2x.jpg 2x"
+                     loading="lazy"
+                     decoding="async"
+                     width="318"
+                     height="318"
+                     alt="Фотография тура на озёро."
+                >
               </picture>
               <div class="card__overlay"></div>
             </li>
@@ -340,7 +376,13 @@
                 <div class="reviews__avatar">
                   <picture>
                     <source srcset="./img/avatar-maria.webp 1x, ./img/avatar-maria@2x.webp 2x" type="image/webp">
-                    <img src="./img/avatar-maria.jpg" srcset="./img/avatar-maria@2x.jpg 2x" width="75" height="75" decoding="async" loading="lazy" alt="Avatar Maria.">
+                    <img src="./img/avatar-maria.jpg" srcset="./img/avatar-maria@2x.jpg 2x"
+                         width="75"
+                         height="75"
+                         decoding="async"
+                         loading="lazy"
+                         alt="Фотография Марии."
+                    >
                   </picture>
                 </div>
                 </div>
@@ -370,7 +412,13 @@
                 <div class="reviews__avatar">
                   <picture>
                     <source srcset="./img/avatar-pavel.webp 1x, ./img/avatar-pavel@2x.webp 2x" type="image/webp">
-                    <img src="./img/avatar-pavel.jpg" srcset="./img/avatar-pavel@2x.jpg 2x" width="75" height="75" decoding="async" loading="lazy" alt="Avatar Pavel.">
+                    <img src="./img/avatar-pavel.jpg" srcset="./img/avatar-pavel@2x.jpg 2x"
+                         width="75"
+                         height="75"
+                         decoding="async"
+                         loading="lazy"
+                         alt="Фотография Павла."
+                    >
                   </picture>
                 </div>
                 </div>
@@ -390,25 +438,41 @@
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-1.webp 1x, ./img/travel-photo-1@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-1.jpg" srcset="./img/travel-photo-1@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-1.jpg" srcset="./img/travel-photo-1@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография самолета."
+                >
               </picture>
             </li>
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-2.webp 1x, ./img/travel-photo-2@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-2.jpg" srcset="./img/travel-photo-2@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-2.jpg" srcset="./img/travel-photo-2@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография вида из палатки."
+                >
               </picture>
             </li>
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-3.webp 1x, ./img/travel-photo-3@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-3.jpg" srcset="./img/travel-photo-3@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-3.jpg" srcset="./img/travel-photo-3@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография человка на скалах."
+                >
               </picture>
             </li>
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-4.webp 1x, ./img/travel-photo-4@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-4.jpg" srcset="./img/travel-photo-4@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-4.jpg" srcset="./img/travel-photo-4@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография дороги."
+                >
               </picture>
             </li>
           </ul>
@@ -416,31 +480,51 @@
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-5.webp 1x, ./img/travel-photo-5@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-5.jpg" srcset="./img/travel-photo-5@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-5.jpg" srcset="./img/travel-photo-5@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография людей на скалах."
+                >
               </picture>
             </li>
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-6.webp 1x, ./img/travel-photo-6@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-6.jpg" srcset="./img/travel-photo-6@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-6.jpg" srcset="./img/travel-photo-6@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография дорожной карты."
+                >
               </picture>
             </li>
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-7.webp 1x, ./img/travel-photo-7@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-7.jpg" srcset="./img/travel-photo-7@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-7.jpg" srcset="./img/travel-photo-7@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография моста в лес."
+                >
               </picture>
             </li>
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-8.webp 1x, ./img/travel-photo-8@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-8.jpg" srcset="./img/travel-photo-8@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-8.jpg" srcset="./img/travel-photo-8@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография людей с палаткой."
+                >
               </picture>
             </li>
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-13.webp 1x, ./img/travel-photo-13@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-13.jpg" srcset="./img/travel-photo-13@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-13.jpg" srcset="./img/travel-photo-13@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография узкой улицы города."
+                >
               </picture>
             </li>
           </ul>
@@ -448,25 +532,41 @@
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-9.webp 1x, ./img/travel-photo-9@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-9.jpg" srcset="./img/travel-photo-9@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-9.jpg" srcset="./img/travel-photo-9@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография красивых домов."
+                >
               </picture>
             </li>
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-10.webp 1x, ./img/travel-photo-10@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-10.jpg" srcset="./img/travel-photo-10@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-10.jpg" srcset="./img/travel-photo-10@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография человека на фоне озера и гор."
+                >
               </picture>
             </li>
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-11.webp 1x, ./img/travel-photo-11@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-11.jpg" srcset="./img/travel-photo-11@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-11.jpg" srcset="./img/travel-photo-11@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография оживленной улицы."
+                >
               </picture>
             </li>
             <li class="gallery__item">
               <picture>
                 <source srcset="./img/travel-photo-12.webp 1x, ./img/travel-photo-12@2x.webp 2x" type="image/webp">
-                <img src="./img/travel-photo-12.jpg" srcset="./img/travel-photo-12@2x.jpg 2x" decoding="async" loading="lazy">
+                <img src="./img/travel-photo-12.jpg" srcset="./img/travel-photo-12@2x.jpg 2x"
+                     decoding="async"
+                     loading="lazy"
+                     alt="Фотография девочки на сабе."
+                >
               </picture>
             </li>
           </ul>
@@ -518,7 +618,13 @@
             </article>
             <picture>
               <source srcset="./img/story-image-1.webp 1x, ./img/story-image-1@2x.webp 2x" type="image/webp">
-              <img class="card__image" src="./img/story-image-1.jpg" srcset="./img/story-image-1@2x.jpg 2x" width="318" height="455" loading="lazy" decoding="async" alt="">
+              <img class="card__image" src="./img/story-image-1.jpg" srcset="./img/story-image-1@2x.jpg 2x"
+                   width="318"
+                   height="455"
+                   loading="lazy"
+                   decoding="async"
+                   alt="Фотография путешественницы."
+              >
             </picture>
             <div class="card__overlay"></div>
           </li>
@@ -551,7 +657,13 @@
             </article>
             <picture>
               <source srcset="./img/story-image-2.webp 1x, ./img/story-image-2@2x.webp 2x" type="image/webp">
-              <img class="card__image" src="./img/story-image-2.jpg" srcset="./img/story-image-2@2x.jpg 2x" width="318" height="455" loading="lazy" decoding="async" alt="">
+              <img class="card__image" src="./img/story-image-2.jpg" srcset="./img/story-image-2@2x.jpg 2x"
+                   width="318"
+                   height="455"
+                   loading="lazy"
+                   decoding="async"
+                   alt="Фотография группы путешественников."
+              >
             </picture>
             <div class="card__overlay"></div>
           </li>
@@ -589,7 +701,13 @@
             </article>
             <picture>
               <source srcset="./img/story-image-3.webp 1x, ./img/story-image-3@2x.webp 2x" type="image/webp">
-              <img class="card__image" src="./img/story-image-3.jpg" srcset="./img/story-image-3@2x.jpg 2x" width="318" height="455" loading="lazy" decoding="async" alt="">
+              <img class="card__image" src="./img/story-image-3.jpg" srcset="./img/story-image-3@2x.jpg 2x"
+                   width="318"
+                   height="455"
+                   loading="lazy"
+                   decoding="async"
+                   alt="Фотография красивого пляжа."
+              >
             </picture>
             <div class="card__overlay"></div>
           </li>
@@ -602,7 +720,13 @@
         <div class="connection__logo">
           <picture>
             <source srcset="./img/footer-photo.webp 1x, ./img/footer-photo@2x.webp 2x" type="image/webp">
-            <img src="./img/footer-photo.jpg" srcset="./img/footer-photo@2x.jpg 2x" width="130" height="133">
+            <img src="./img/footer-photo.jpg" srcset="./img/footer-photo@2x.jpg 2x"
+                 width="130"
+                 height="133"
+                 decoding="async"
+                 loading="lazy"
+                 alt="Фотография дома."
+            >
           </picture>
         </div>
         <div class="connection__text">
