--- a/src/index.html
+++ b/src/index.html
@@ -278,7 +278,14 @@
             <ul class="form__list">
               <li class="form__item">
                 <label class="form__label" for="name">Имя</label>
-                <input class="form__field" type="text" name="name" id="name" placeholder="Введите Ваше имя" required>
+                <input
+                        class="form__field"
+                        type="text"
+                        name="name"
+                        id="name"
+                        placeholder="Введите Ваше имя"
+                        required
+                >
               </li>
               <li class="form__item">
                 <label class="form__label" for="direction">Направление</label>
@@ -292,19 +299,47 @@
               </li>
               <li class="form__item">
                 <label class="form__label" for="email">Email</label>
-                <input class="form__field" type="email" name="email" id="email" placeholder="example@mail.com" required>
+                <input
+                        class="form__field"
+                        type="email"
+                        name="email"
+                        id="email"
+                        placeholder="example@mail.com"
+                        required
+                >
               </li>
               <li class="form__item">
                 <label class="form__label" for="phone">Телефон</label>
-                <input class="form__field" type="tel" name="phone" id="phone" placeholder="+ 7 ( _ _ _ ) _ _ _ - _ _ - _ _" required>
+                <input class="form__field"
+                       type="tel"
+                       name="phone"
+                       id="phone"
+                       pattern="\+7\-[0-9]{3}\-[0-9]{3}\-[0-9]{2}\-[0-9]{2}"
+                       placeholder="+ 7 ( _ _ _ ) _ _ _ - _ _ - _ _"
+                       required
+                >
               </li>
               <li class="form__item">
                 <label class="form__label" for="data-start">Дата от</label>
-                <input class="form__field" type="date" name="data-start" id="data-start" placeholder="ДД.ММ.ГГГГ" required>
+                <input class="form__field"
+                       type="date"
+                       name="data-start"
+                       id="data-start"
+                       max="9999-12-31"
+                       placeholder="ДД.ММ.ГГГГ"
+                       required
+                >
               </li>
               <li class="form__item">
                 <label class="form__label" for="data-end">Дата до</label>
-                <input class="form__field" type="date" name="data-end" id="data-end" placeholder="ДД.ММ.ГГГГ" required>
+                <input
+                        class="form__field"
+                        type="date" name="data-end"
+                        id="data-end"
+                        max="9999-12-31"
+                        placeholder="ДД.ММ.ГГГГ"
+                        required
+                >
               </li>
               <li class="form__item form__item-textarea">
                 <label class="form__label" for="comment">Комментарий</label>
