--- a/src/index.html
+++ b/src/index.html
@@ -314,7 +314,6 @@
                        type="tel"
                        name="phone"
                        id="phone"
-                       pattern="\+7\-[0-9]{3}\-[0-9]{3}\-[0-9]{2}\-[0-9]{2}"
                        placeholder="+ 7 ( _ _ _ ) _ _ _ - _ _ - _ _"
                        required
                 >
@@ -801,6 +800,7 @@
       </div>
     </footer>
   </main>
+  <script src="https://unpkg.com/imask"></script>
   <script src="./js/scripts.js"></script>
 </body>
 </html>
